Fix right-aligned images

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10173,7 +10173,7 @@ nav.header .btn {
 }
 
 .main-section-wrapper .main-section.fixed div {
-  background: fixed center right / cover;
+  background: fixed center / cover;
 }
 
 .main-section-wrapper .image {
