--- a/resources/assets/sass/views/_main.scss
+++ b/resources/assets/sass/views/_main.scss
@@ -55,7 +55,7 @@
     }
     &.fixed {
       div {
-        background: fixed center right / cover;
+        background: fixed center / cover;
       }
     }
   }
